# Cybeart-Peripheral-Software

./: .gitignore  Cargo.toml  README.md  bright_max.pcapng  bright_min.pcapng  installer.iss  red.pcapng  speed_max.pcapng  speed_mid.pcapng  speed_min.pcapng  tauri-release.yml
.github/workflows/: tauri-release.yml
src/: build.rs  device.rs  effects.rs  gui.rs  layout.rs  main.rs
tauri-ui/: index.html  package-lock.json  package.json  tsconfig.json
tauri-ui/src/: App.tsx  styles.css
tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
tauri-ui/src-tauri/src/: lib.rs  main.rs
