[package]
name = "nighthawk75-tauri"
version = "0.1.2"
description = "Tauri React UI for Nighthawk 75"
edition = "2021"
[features]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "nighthawk75_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["updater"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hidapi = "2.6"
